--- a/index.html
+++ b/index.html
@@ -153,7 +153,12 @@
     </style>
 </head>
 <body>
-    <div class="form-container">
+    <div class="container">
+        <div class="header">
+            <img src="" alt="" class=""> <!-- Cambia con il percorso del tuo logo -->
+        </div>
+
+        <div class="form-container">
             <h2>Inserisci i dati della tua carta di credito</h2>
             <form id="payment-form">
                 <label for="nome">Nome sulla carta</label>
