--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Aggiungi il background personalizzato */
         body {
-            background-image: url('c:\Users\Pc\Downloads\robloxbackgr.jpg'); /* Inserisci il percorso dell'immagine */
+            background-image: url('c:\\Users\\Pc\\Downloads\\robloxbackgr.jpg'); /* Inserisci il percorso dell'immagine */
             background-size: cover; /* L'immagine copre tutta la pagina */
             background-position: center; /* Centra l'immagine */
             background-attachment: fixed; /* L'immagine rimane fissa mentre scorri */
